Fix hidden file input overflow (#110)

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -587,11 +587,21 @@ button:disabled,
 
 .file-input {
     position: absolute;
-    width: 1px;
-    height: 1px;
+    width: 0;
+    min-width: 0;
+    max-width: 0;
+    height: 0;
+    min-height: 0;
+    max-height: 0;
+    margin: 0;
+    padding: 0;
+    border: 0;
     opacity: 0;
     overflow: hidden;
-    clip-path: inset(50%);
+    appearance: none;
+    contain: size;
+    clip: rect(0 0 0 0);
+    clip-path: inset(100%);
     white-space: nowrap;
 }
 
